
syntax = "proto3";

package table;

option go_package = "github.com/coschain/contentos-go/table";

import "prototype/type.proto";

message so_contractData {
	prototype.contract_data_id   id        =      1;
    bytes                        value     =      2;
      
}


message so_unique_contractData_by_id {
	prototype.contract_data_id	id    = 1;
}
